--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   
   <div class="sliderContainer">
     <span style="padding-left: 10px;">Rotation Speed:</span>
-    <input type="range" min="0" max="100" value="20" style="transform: translateY(3px);" id="rotationSpeedSlider">
+    <input type="range" min="0" max="40" value="20" style="transform: translateY(3px);" id="rotationSpeedSlider">
     <span id="rotationSpeedText"></span>
   </div>
   
   <div class="sliderContainer">
-    <span style="padding-left: 11px;">Rotation Angle:</span>
-    <input type="range" min="0" max="90" value="45" style="transform: translateY(3px);" id="rotationAngleSlider">
+    <span style="padding-left: 32px;">View Angle:</span>
+    <input type="range" min="0" max="100" value="50" style="transform: translateY(3px);" id="rotationAngleSlider">
     <span id="rotationAngleText"></span>
   </div>
   
@@ -46,20 +46,20 @@
   <script> //Sliders
     //Rotation Speed
     var rotationSpeedSlider = document.getElementById("rotationSpeedSlider");
-    document.getElementById("rotationSpeedText").innerHTML = rotationSpeedSlider.value + "%";
+    document.getElementById("rotationSpeedText").innerHTML = rotationSpeedSlider.value * 2 + "%";
     rotationSpeed = rotationSpeedSlider.value / 1000;
     rotationSpeedSlider.oninput = function(){
-      document.getElementById("rotationSpeedText").innerHTML = this.value + "%";
+      document.getElementById("rotationSpeedText").innerHTML = this.value * 2 + "%";
       rotationSpeed = this.value / 1000;
     }
     
     //Rotation Angle
     var rotationAngleSlider = document.getElementById("rotationAngleSlider");
-    document.getElementById("rotationAngleText").innerHTML = rotationAngleSlider.value + "°";
-    rotationAngle = rotationAngleSlider.value / 50;
+    document.getElementById("rotationAngleText").innerHTML = (rotationAngleSlider.value * 0.9).toFixed(0) + "°";
+    rotationAngle = rotationAngleSlider.value / 100;
     rotationAngleSlider.oninput = function(){
-      document.getElementById("rotationAngleText").innerHTML = this.value + "°";
-      rotationAngle = this.value / 50;
+      document.getElementById("rotationAngleText").innerHTML = (this.value * 0.9).toFixed(0) + "°";
+      rotationAngle = this.value / 100;
     }
     
     //Parallax
