--- a/index.html
+++ b/index.html
@@ -159,5 +159,5 @@
   </script>
   </body>
   
-  <footer>Thanks to AwhiWorld for such a great workshop.</footer>
+  <footer>Thanks to AwhiWorld for a great workshop.</footer>
 </html>
