Updated site metadata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <title>Polygons in p5</title>
     <meta charset="UTF-8">
     <meta name="author" content="Zak Manley">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Polygons in p5">
+    <meta property="og:description" content="Polygons made with p5.js using only 2D vectors.">
+    <meta property="og:site_name" content="Polygons in p5">
+    <meta property="og:image" content="https://politecrow.github.io/AwhiWorldWorkshop/assets/siteThumbnail.png">
+    <meta property="og:url" content="https://politecrow.github.io/AwhiWorldWorkshop/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image:alt" content="thumbnail">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/style.css">
